# jetsyntax

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md  dprint.json  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: benchmark.yml  ci.yml  pr-title.yml
crates/jetsyntax/: Cargo.toml
crates/jetsyntax/src/: lexer.rs  lib.rs  operator.rs  tape.rs
crates/jetsyntax/src/lexer/: regexp.rs
crates/jetsyntax/src/parser/: context.rs  mod.rs
crates/jetsyntax/tests/: lexer.rs  parser_js.rs  parser_ts_slice.rs  public_api.rs
napi/: Cargo.toml
napi/src/: lib.rs
tasks/benchmark-napi/: bench.mjs  metrics.mjs  metrics.test.mjs  package.json  prepare.mjs  runner.mjs  runner.test.mjs
tasks/benchmark-native/: Cargo.toml  bench.mjs  prepare-yuku.mjs
tasks/benchmark-native/src/: main.rs
tasks/benchmark-native/yuku/src/: codegen_options.zig  main.zig
tasks/conformance/: aggregate-official.mjs  official-refs.json  official-run.mjs  package.json  run.mjs
tasks/conformance/official/: babel.mjs  shared.mjs  test262.mjs  typescript.mjs
tasks/conformance/test/: official-loaders.test.mjs
