[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.0.0-alpha.0"
authors = ["Liang Mi <https://github.com/liangmiQwQ>", "contributors"]
edition = "2024"
rust-version = "1.96.1"
license = "MIT"
repository = "https://github.com/liangmiQwQ/jetsyntax"

[workspace.dependencies]
jetsyntax = { path = "crates/jetsyntax", version = "0.0.0-alpha.0" }
unicode-id-start = "1.4.0"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"

[profile.bench]
codegen-units = 1
lto = "fat"
