[workspace]
resolver = "3"
members = ["crates/*", "napi", "tasks/benchmark-native"]

[workspace.package]
version = "0.0.0-alpha.0"
authors = ["Liang Mi <https://github.com/liangmiQwQ>", "contributors"]
edition = "2024"
rust-version = "1.96.1"
license = "MIT"
repository = "https://github.com/liangmiQwQ/jetsyntax"

[workspace.dependencies]
jetsyntax = { path = "crates/jetsyntax", version = "0.0.0-alpha.0" }
napi = { version = "3.11.0", default-features = false, features = ["napi9"] }
napi-build = "2.3.2"
napi-derive = "3.6.0"
oxc = { version = "0.140.0", git = "https://github.com/oxc-project/oxc", rev = "d3ce2e6520cc0109851673ab24caf7a402f5a917", features = ["ast_visit", "regular_expression", "semantic", "serialize"] }
unicode-id-start = "1.4.0"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"

[profile.bench]
codegen-units = 1
lto = "fat"
