[package]
name = "jetsyntax_napi"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
jetsyntax.workspace = true
mimalloc-safe.workspace = true
napi.workspace = true
napi-derive.workspace = true

[build-dependencies]
napi-build.workspace = true
